2023-01-17  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha01: Morning Show';git push
	git tag -a 5.1.5-alpha01 -m 'Functionally identical to 5.1.4';git push --tags

	* Quiet clang++ v. 13 compiler warnings by shifting from sprintf() to snprintf()

2023-01-10  Charlie Zender  <zender@uci.edu>

	* Update homepage with NASA OSTFL project

	* NCO 5.1.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4: Bakhmut';git push
	git tag -a 5.1.4 -m 'all: deactivate SIMD, cxl UDUNITS2_PATH, no cmp NC_STRING/NC_VLEN, NCO_ERR_FL_LN; ncremap: +ve-dwn dpt, ARGO SOSE WOA18';git push --tags

2023-01-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-beta01: Habana';git push
	git tag -a 5.1.4-beta01 -m 'fix ilev_nm_out';git push --tags

	* Copy ilev_nm_out from rgr->ilev not rgr->lev for prs_out grids

2023-01-06  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha07: Atmospheric River';git push
	git tag -a 5.1.4-alpha07 -m 'ncremap: +ve-dwn dpt, ARGO SOSE';git push --tags

2023-01-05  Charlie Zender  <zender@uci.edu>

	* ncremap: Hooks to support SOSE vertical grid

	* ncremap: Verify that SIMD pragmas caused E3SMU Compy compute-node issues

	* ncremap: Allow positive-downwards 1D depth coordinates, verify with ARGO

2023-01-04  Charlie Zender  <zender@uci.edu>

	* ncremap: Add LATITUDE, LONGITUDE coordinates to database for ARGO observations

	* NCO 5.1.4-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha06: Postop';git push
	git tag -a 5.1.4-alpha06 -m 'all: deactivate SIMD, cxl UDUNITS2_PATH; ncremap: fix ilev rst->3D';git push --tags

	* De-activate SIMD pragmas by resetting compiler version threshold from 8 to 737

2023-01-03  Charlie Zender  <zender@uci.edu>

	* Update nco.texi with new vertical interpolation features
