@@ -1,3 +1,11 @@
+2023-01-19  Charlie Zender  <zender@uci.edu>
+
+	* NCO 5.1.5-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha02: Champignons';git push
+	git tag -a 5.1.5-alpha02 -m 'fxm';git push --tags
+
+	* Append cell_method by default only with ncra, not ncrcat/nces
+
 2023-01-17  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.5-alpha01 release procedure:
